style(navbar): fixed logo clipping out of navbar

--- a/src/components/MobileNavbar.css
+++ b/src/components/MobileNavbar.css
@@ -17,9 +17,12 @@
       z-index: 10;
   }
 
+  .mobile-navbar > a{
+    height: 100%;
+  }
+
   .navbar__logo {
-      height: 80px;
-      margin: 10px;
+    height: 100%;
   }
 
   .mobile-menu {
